# ABAQUS_Scratch_model

./: .gitignore  .pre-commit-config.yaml  MassScaleConvergence.py  MeshConvergence.py  PostProcessing.py  README.txt  SubmissionFile.py  cleanup.py  material_parameter_generator.py  material_parameters.csv  material_parameters.py  requirements.txt  setup.cfg
ConstantScratchDepth/: ZhangEtAlValidation.py
ProgressiveLoadScratch/: Constants.py  PostProcessing.py  ProgressiveLoadScratchTest.py  PyramidIndenter.py  RockwellIndenter.py  SubstrateGeneration.py  SubstrateMaterial.py  SubstratePartitionPattern.py  helpers.py
ProgressiveLoading/: ProgressiveLoadScratchTest.py  RockwellIndenter.py  SubmissionFile.py  SubstrateGeneration.py  SubstrateMaterial.py
tests/: test_progressive_load_scratch.py
