[metadata]
name = ABAQUS_Scratch_model

[options]
packages = find_namespace:
package_dir = 
    =ProgressiveLoadScratch

[options.packages.find]
where = ProgressiveLoadScratch
exclude =
    tests

[tool:pytest]
testpaths = tests

[flake8]
ignore = F403,F405,E266,E501
exclude = 
    .venv,
    __pycache__,
    build,
    dist